--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,8 @@
         {providers,           "1.8.1"},
         {getopt,              "1.0.1"},
         {bbmustache,          "1.8.0"},
-        {relx,                "3.33.0"},
+        %% {relx,                "3.33.0"},
+        {relx, {git, "https://github.com/erlware/relx.git", {branch, "4.0.0"}}},
         {cf,                  "0.2.2"},
         {cth_readable,        "1.4.8"},
         {eunit_formatters,    "0.5.0"}]}.
@@ -28,6 +29,8 @@
 %% Do not use outside rebar. Config interface is not stable.
 {escript_incl_extra, [{"relx/priv/templates/*", "_build/default/lib/"},
                       {"rebar/priv/templates/*", "_build/default/lib/"}]}.
+
+{overrides, [{add, relx, [{erl_opts, [{d, 'RLX_LOG', rebar_log}]}]}]}.
 
 {erl_opts, [{platform_define, "^(19|2)", rand_only},
             {platform_define, "^18", no_maps_update_with},
