--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
         {getopt,              "1.0.1"},
         {bbmustache,          "1.8.0"},
         %% {relx,                "3.33.0"},
-        {relx, {git, "https://github.com/erlware/relx.git", {branch, "4.0.0"}}},
+        {relx, {git, "https://github.com/erlware/relx.git", {tag, "v4.0.0-rc1"}}},
         {cf,                  "0.2.2"},
         {cth_readable,        "1.4.8"},
         {eunit_formatters,    "0.5.0"}]}.
