--- a/rebar.config
+++ b/rebar.config
@@ -23,6 +23,7 @@
              ]}.
 
 {escript_name, rebar3}.
+{escript_comment, "%%Rebar3 3.13.2\n"}.
 {escript_emu_args, "%%! +sbtu +A1\n"}.
 %% escript_incl_extra is for internal rebar-private use only.
 %% Do not use outside rebar. Config interface is not stable.
