--- a/rebar.config
+++ b/rebar.config
@@ -24,6 +24,7 @@
              ]}.
 
 {escript_name, rebar3}.
+{escript_wrappers_windows, ["cmd", "powershell"]}.
 {escript_comment, "%%Rebar3 3.14.0-rc1\n"}.
 {escript_emu_args, "%%! +sbtu +A1\n"}.
 %% escript_incl_extra is for internal rebar-private use only.
