--- a/rebar.config
+++ b/rebar.config
@@ -8,8 +8,7 @@
         {providers,           "1.8.1"},
         {getopt,              "1.0.1"},
         {bbmustache,          "1.8.0"},
-        %% {relx,                "3.33.0"},
-        {relx, {git, "https://github.com/erlware/relx.git", {branch, "master"}}},
+        {relx,                "4.0.0-rc2"},
         {cf,                  "0.2.2"},
         {cth_readable,        "1.4.8"},
         {eunit_formatters,    "0.5.0"}]}.
