--- a/rebar.config
+++ b/rebar.config
@@ -49,6 +49,9 @@
     {exclude_mods, [rebar_prv_alias]}
 ]}.
 
+%% Keep only the logs of the last 5 runs
+{ct_opts, [{keep_logs, 5}]}.
+
 %% Profiles
 {profiles, [{test, [
                    {deps, [{meck, "0.8.13"}]},
