Approach the "Principle of Least Astonishment"

--- a/rebar.config.sample
+++ b/rebar.config.sample
@@ -219,7 +219,7 @@
 
 %% apps to auto-boot with `rebar3 shell'; defaults to apps
 %% specified in a `relx' tuple, if any.
-{shell, [{apps, [app1, app2]}]}.
+{shell, [{apps, [app1, app2]}, {script_file, "shell.escript"}]}.
 
 %% == xref ==
 
