--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,4 +41,4 @@ jobs:
     - name: Copy rebar3 escript to S3
       if: "!github.event.release.prerelease"
       run: |
-        aws s3 sync ./rebar3 s3://rebar3
+        aws s3 cp ./rebar3 s3://rebar3
