--- a/rebar.config.sample
+++ b/rebar.config.sample
@@ -252,3 +252,14 @@
 %% * {module(), function()},
 %% * {module(), function(), arity()}
 {xref_ignores, []}.
+
+%% == alias ==
+
+%% When you want a certain combination of operations to be done
+%% as if you were using a rebar3 command. In the example below:
+%% > rebar3 check
+%% or
+%% > rebar3 test
+
+{alias, [{check, [xref, dialyzer]},
+         {test, [eunit, {ct, "--suite=rebar_alias_SUITE"}, cover]}]}.
