Prevent warnings on unknown functions/types

--- a/rebar.config
+++ b/rebar.config
@@ -46,7 +46,8 @@
 %% Use OTP 18+ when dialyzing rebar3
 {dialyzer, [
     {warnings, [unknown]},
-    {exclude_mods, [rebar_prv_alias]}
+    {exclude_mods, [rebar_prv_alias]},
+    {plt_extra_apps, [parsetools, public_key]}
 ]}.
 
 %% Keep only the logs of the last 5 runs
