--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,10 @@
 %% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ts=4 sw=4 ft=erlang et
 
-{deps, [{erlware_commons,     "1.3.1"},
+{deps, [{erlware_commons,     "1.4.0"},
         {ssl_verify_fun,      "1.1.6"},
         {certifi,             "2.5.3"},
-        {parse_trans,         "3.3.0"}, % force otp-21 compat
+        {parse_trans,         "3.3.0"},
         {providers,           "1.8.1"},
         {getopt,              "1.0.1"},
         {bbmustache,          "1.10.0"},
