--- a/rebar.config
+++ b/rebar.config
@@ -1,17 +1,17 @@
 %% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ts=4 sw=4 ft=erlang et
 
-{deps, [{erlware_commons,     "1.4.0"},
-        {ssl_verify_fun,      "1.1.6"},
-        {certifi,             "2.5.3"},
-        {parse_trans,         "3.3.0"},
-        {providers,           "1.8.1"},
-        {getopt,              "1.0.1"},
-        {bbmustache,          "1.10.0"},
-        {relx,                "4.2.0"},
-        {cf,                  "0.3.1"},
-        {cth_readable,        "1.4.9"},
-        {eunit_formatters,    "0.5.0"}]}.
+{deps, [{erlware_commons,  "1.4.0"},
+        {ssl_verify_fun,   "1.1.6"},
+        {certifi,          "2.5.3"},
+        {parse_trans,      "3.3.1"}, % bypass certifi's lock for OTP-24 compat
+        {providers,        "1.8.1"},
+        {getopt,           "1.0.1"},
+        {bbmustache,       "1.10.0"},
+        {relx,             "4.2.0"},
+        {cf,               "0.3.1"},
+        {cth_readable,     "1.4.9"},
+        {eunit_formatters, "0.5.0"}]}.
 
 {post_hooks, [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
                escriptize,
