--- a/rebar.config
+++ b/rebar.config
@@ -63,6 +63,10 @@
                 {ct_opts, [{dir, "systest"}]}
             ]},
 
+            {dialyzer, [
+                {erl_opts, [debug_info, nowarn_export_all]}
+            ]},
+
             {bootstrap, []},
 
             {prod, [
