--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: gleam-lang/setup-erlang@v1.0.0
+    - uses: bajankristof/setup-erlang@master
       with:
         otp-version: 19.3.6.13
     - name: Compile
