--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -8,12 +8,12 @@ on:
 jobs:
   build:
     name: Publish escript for every merge to master
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
 
-    - uses: bajankristof/setup-erlang@master
+    - uses: gleam-lang/setup-erlang@master
       with:
         otp-version: 19.3.6.13
     - name: Compile
