Vendor certifi (2.5.3) as r3_certifi

--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,7 @@
 
 {deps, [{erlware_commons,  "1.4.0"},
         {ssl_verify_fun,   "1.1.6"},
-        {certifi,          "2.5.3"},
-        {parse_trans,      "3.3.1"}, % bypass certifi's lock for OTP-24 compat
+        {parse_trans,      "3.3.1"}, % required by our vendored certifi
         {providers,        "1.8.1"},
         {getopt,           "1.0.1"},
         {bbmustache,       "1.10.0"},
@@ -86,7 +85,6 @@
                                     warnings_as_errors]},
                         {deps, []}, {plugins, []}]},
                     {add, ssl_verify_hostname, [{erl_opts, [no_debug_info]}]},
-                    {add, certifi, [{erl_opts, [no_debug_info]}]},
                     {add, cf, [{erl_opts, [no_debug_info]}]},
                     {add, cth_readable, [{erl_opts, [no_debug_info]}]},
                     {add, eunit_formatters, [{erl_opts, [no_debug_info]}]},
