--- a/rebar.config
+++ b/rebar.config
@@ -32,12 +32,9 @@
 
 {overrides, [{add, relx, [{erl_opts, [{d, 'RLX_LOG', rebar_log}]}]}]}.
 
-{erl_opts, [{platform_define, "^(19|2)", rand_only},
-            {platform_define, "^18", no_maps_update_with},
-            {platform_define, "^2", unicode_str},
+{erl_opts, [warnings_as_errors,
             {platform_define, "^(2[1-9])|(20\\\\.3)", filelib_find_source},
-            {platform_define, "^(R|1|20)", fun_stacktrace},
-            warnings_as_errors
+            {platform_define, "^(20)", fun_stacktrace}
            ]}.
 
 {edoc_opts, [preprocess]}.
