fix discovery logic to include each file only once

--- a/rebar.config.sample
+++ b/rebar.config.sample
@@ -47,8 +47,10 @@
 %% Extensions for discovering application resource files. Rebar3 discovers
 %% applications by searching for these files. When building the application
 %% information, rebar will use the first discovered files in the list.
+%% This configuration is intended to let profiles compose with special app
+%% files by prefixing extensions.
 {application_resource_extensions, [
-    "app.src.script", "app.src", "mix.exs"
+    ".app.src.script", ".app.src", ".exs"
 ]}
 
 %% == Common Test ==
