--- a/rebar.config.sample
+++ b/rebar.config.sample
@@ -50,7 +50,7 @@
 %% This configuration is intended to let profiles compose with special app
 %% files by prefixing extensions.
 {application_resource_extensions, [
-    ".app.src.script", ".app.src", ".exs"
+    ".app.src.script", ".app.src"
 ]}
 
 %% == Common Test ==
