--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        otp_version: [20, 21, 22, 23, 24]
+        otp_version: [22, 23, 24]
         os: [ubuntu-latest]
 
     container:
