Modified escriptize post hook to comply with powershell sintax

--- a/rebar.config
+++ b/rebar.config
@@ -17,8 +17,8 @@
                "cp \"$REBAR_BUILD_DIR/bin/rebar3\" ./rebar3"},
               {"win32",
                escriptize,
-               "robocopy \"%REBAR_BUILD_DIR%/bin/\" ./ rebar3* "
-               "/njs /njh /nfl /ndl & exit /b 0"} % silence things
+               "robocopy \"$REBAR_BUILD_DIR/bin/\" ./ rebar3* "
+               "/njs /njh /nfl /ndl ; exit 0"} % silence things
              ]}.
 
 {escript_name, rebar3}.
