--- a/apps/rebar/rebar.config
+++ b/apps/rebar/rebar.config
@@ -10,7 +10,8 @@
         {relx,             "4.8.0"},
         {cf,               "0.3.1"},
         {cth_readable,     "1.5.1"},
-        {eunit_formatters, "0.5.0"}]}.
+        {eunit_formatters, "0.5.0"},
+        {verl,             "1.1.1"}]}.
 
 {post_hooks, [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
                escriptize,
