Match Dialyzer defaults

--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,8 @@
     {dialyzer, [
         {erl_opts, [debug_info, nowarn_export_all]},
         %% Ignore deps known to generate warnings
-        {dialyzer, [{exclude_apps, [cth_readable, erlware_commons, relx]}]}
+        {dialyzer, [{warnings, [no_unknown]},
+                    {exclude_apps, [cth_readable, erlware_commons, relx]}]}
     ]},
     %% Duplicated from apps/rebar3:
     %% - we don't want the test profile applied to our vendored deps.
