--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       image: erlang:${{ matrix.otp_version }}
 
     env:
-      LATEST_OTP_RELEASE: 26.0
+      LATEST_OTP_RELEASE: 26
 
     steps:
     - uses: actions/checkout@v2
@@ -33,7 +33,9 @@ jobs:
     - shell: bash
       name: Dialyzer
       run: |
-        [[ "${{ matrix.otp_version }}" != "${{ env.LATEST_OTP_RELEASE }}" ]] || (./rebar3 clean -a && ./rebar3 as dialyzer dialyzer)
+        ./rebar3 clean -a
+        ./rebar3 as dialyzer dialyzer
+      if: ${{ matrix.otp_version == env.LATEST_OTP_RELEASE }}
 
   macos:
     name: Test on MacOS
