--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,9 @@ jobs:
     - name: Debug Brew
       run: brew doctor || true
     - name: Install Erlang
-      run: brew install erlang@${{ env.LATEST_OTP_RELEASE }}
+      #run: brew install erlang@${{ env.LATEST_OTP_RELEASE }}
+      # fall back to OTP-26 since OTP 27.0 doesn't build on homebrew due to manpages issues
+      run: brew install erlang@26
     - name: Compile
       run: ./bootstrap
     - name: CT tests
