--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,9 @@ jobs:
     - name: Debug Brew
       run: brew doctor || true
     - name: Install Erlang
-      run: brew install erlang@${{ env.LATEST_OTP_RELEASE }}
+      # fallback to OTP-27 since OTP-28 does not currently build on Brew
+      # run: brew install erlang@${{ env.LATEST_OTP_RELEASE }}
+      run: brew install erlang@27
     - name: Compile
       run: ./bootstrap
     - name: CT tests
