Add docs from rebar3.org, reworked for ExDoc
- Copy rebar3.org content/en/docs to docs
- Remove Hugo headers in all md files
- Where possible, move Hugo descriptions to quote blocks under the h1
- Remove search.md
- Create package_management/publishing-packages.md from _index.md
- Remove content/en/_index.html (the rebar3.org home page)
- Create testing/introduction.md from testing/_index.md
- Remove _index.md from about, configuration, deployment, extending, and tutorials (only contained generic descriptions)
- Tweak markdown tables to render correctly in ExDoc (README, configuration.md, commands.md, building_plugins.md)
- Remove <br> from table cells
- Rework blocks/callout to Admonitions `{: .warning}` and `{: .info}`
- Fix various broken links (e.g. plugins.md publishing, aliases sections, in configuration.md cover section)
- Convert internal doc linking to ExDoc paths

--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,11 @@
 {project_app_dirs, ["apps/*","lib/*",".","vendor/*"]}.
 {project_plugin_dirs, ["plugins/*","vendor_plugins/*"]}.
 
+{project_plugins, [
+    {rebar3_ex_doc, "0.2.30"},
+    {rebar3_hex, "7.0.11"}
+]}.
+
 %% Duplicated from apps/rebar3:
 %% - we want people who rely on rebar3 as a dependency to still be able
 %%   to fetch it with git_subdir and have it work
@@ -33,6 +38,41 @@
         {dialyzer, [{warnings, [no_unknown]},
                     {plt_extra_apps, [parsetools, public_key]},
                     {exclude_apps, [cth_readable, erlware_commons, relx]}]}
+    ]},
+    {docs, [
+    % ./rebar3 as docs ex_doc --app rebar
+        {ex_doc, [
+            {source_url, <<"https://github.com/erlang/rebar3">>},
+            {extras, [
+                <<"README.md">>,
+                <<"docs/getting-started.md">>,
+                <<"docs/basic_usage.md">>,
+                <<"docs/workflow.md">>,
+                <<"docs/configuration/configuration.md">>,
+                <<"docs/configuration/dependencies.md">>,
+                <<"docs/configuration/profiles.md">>,
+                <<"docs/configuration/plugins.md">>,
+                <<"docs/configuration/config_script.md">>,
+                <<"docs/commands.md">>,
+                <<"docs/testing/introduction.md">>,
+                <<"docs/testing/ct.md">>,
+                <<"docs/testing/eunit.md">>,
+                <<"docs/testing/coverage.md">>,
+                <<"docs/package_management/publishing-packages.md">>,
+                <<"docs/deployment/releases.md">>,
+                <<"docs/tutorials/building_plugins.md">>,
+                <<"docs/tutorials/templates.md">>,
+                <<"docs/tutorials/building_c_cpp.md">>,
+                <<"docs/tutorials/using_breakpoints_to_debug_tests.md">>,
+                <<"docs/tutorials/from_rebar2_to_rebar3.md">>,
+                <<"docs/extending/custom_compiler_modules.md">>,
+                <<"docs/extending/custom_dep_resources.md">>,
+                <<"docs/extending/custom_compiler_plugins.md">>,
+                <<"docs/about/about-us.md">>,
+                <<"docs/about/security-policy.md">>
+            ]},
+            {main, <<"readme">>}
+        ]}
     ]},
     %% Duplicated from apps/rebar3:
     %% - we don't want the test profile applied to our vendored deps.
