Hack in support for groups_for_extras

--- a/rebar.config
+++ b/rebar.config
@@ -71,6 +71,24 @@
                 <<"docs/about/about-us.md">>,
                 <<"docs/about/security-policy.md">>
             ]},
+            {groups_for_extras,[
+                % Temporary hack, awaiting official groups_for_extras support in rebar3_ex_doc
+                %
+                %  1. mkdir _checkouts && cd _checkouts && ln -s ../_build/default/plugins/rebar3_ex_doc rebar3_ex_doc
+                %  2. In `to_ex_doc_format/1`, add the following clause:
+                %
+                %         ({groups_for_extras = K, Groups}, Opts) when is_list(Groups) ->
+                %            [{K, [{to_binary(GroupName), L} || {GroupName, L} <- Groups]} | Opts];
+                %
+                %  3. The current config abuses knowledge of the Regex internals
+                {'Configuration', #{source => <<"docs/configuration">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
+                {'Testing', #{source => <<"docs/testing">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
+                {'Hex Package Management', #{source => <<"docs/package_management">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
+                {'Deployment', #{source => <<"docs/deployment">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
+                {'Tutorials', #{source => <<"docs/tutorials">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
+                {'Extending Rebar3', #{source => <<"docs/extending">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
+                {'About', #{source => <<"docs/about">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}}
+            ]},
             {main, <<"readme">>}
         ]}
     ]},
