--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
 {project_plugin_dirs, ["plugins/*","vendor_plugins/*"]}.
 
 {project_plugins, [
-    {rebar3_ex_doc, "0.2.30"},
+    {rebar3_ex_doc, "0.2.31"},
     {rebar3_hex, "7.0.11"}
 ]}.
 
@@ -40,7 +40,7 @@
                     {exclude_apps, [cth_readable, erlware_commons, relx]}]}
     ]},
     {docs, [
-    % ./rebar3 as docs ex_doc --app rebar
+        % ./rebar3 as docs ex_doc --app rebar
         {ex_doc, [
             {source_url, <<"https://github.com/erlang/rebar3">>},
             {extras, [
@@ -72,22 +72,37 @@
                 <<"docs/about/security-policy.md">>
             ]},
             {groups_for_extras,[
-                % Temporary hack, awaiting official groups_for_extras support in rebar3_ex_doc
-                %
-                %  1. mkdir _checkouts && cd _checkouts && ln -s ../_build/default/plugins/rebar3_ex_doc rebar3_ex_doc
-                %  2. In `to_ex_doc_format/1`, add the following clause:
-                %
-                %         ({groups_for_extras = K, Groups}, Opts) when is_list(Groups) ->
-                %            [{K, [{to_binary(GroupName), L} || {GroupName, L} <- Groups]} | Opts];
-                %
-                %  3. The current config abuses knowledge of the Regex internals
-                {'Configuration', #{source => <<"docs/configuration">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
-                {'Testing', #{source => <<"docs/testing">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
-                {'Hex Package Management', #{source => <<"docs/package_management">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
-                {'Deployment', #{source => <<"docs/deployment">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
-                {'Tutorials', #{source => <<"docs/tutorials">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
-                {'Extending Rebar3', #{source => <<"docs/extending">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}},
-                {'About', #{source => <<"docs/about">>, '__struct__' => 'Elixir.Regex', re_pattern => nil, opts => [], re_version => nil}}
+                {'Configuration', [
+                                <<"docs/configuration/configuration.md">>,
+                                <<"docs/configuration/dependencies.md">>,
+                                <<"docs/configuration/profiles.md">>,
+                                <<"docs/configuration/plugins.md">>,
+                                <<"docs/configuration/config_script.md">>
+                            ]},
+                {'Testing', [
+                                <<"docs/testing/introduction.md">>,
+                                <<"docs/testing/ct.md">>,
+                                <<"docs/testing/eunit.md">>,
+                                <<"docs/testing/coverage.md">>
+                            ]},
+                {'Hex Package Management', [<<"docs/package_management/publishing-packages.md">>]},
+                {'Deployment', [<<"docs/deployment/releases.md">>]},
+                {'Tutorials', [
+                                <<"docs/tutorials/building_plugins.md">>,
+                                <<"docs/tutorials/templates.md">>,
+                                <<"docs/tutorials/building_c_cpp.md">>,
+                                <<"docs/tutorials/using_breakpoints_to_debug_tests.md">>,
+                                <<"docs/tutorials/from_rebar2_to_rebar3.md">>
+                            ]},
+                {'Extending Rebar3', [
+                                <<"docs/extending/custom_compiler_modules.md">>,
+                                <<"docs/extending/custom_dep_resources.md">>,
+                                <<"docs/extending/custom_compiler_plugins.md">>
+                            ]},
+                {'About', [
+                                <<"docs/about/about-us.md">>,
+                                <<"docs/about/security-policy.md">>
+                            ]}
             ]},
             {main, <<"readme">>}
         ]}
