fix: prepare for OTP-29 defaulting to warn_deprecated_catch

--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,8 @@
 {project_app_dirs, ["apps/*","lib/*",".","vendor/*"]}.
 {project_plugin_dirs, ["plugins/*","vendor_plugins/*"]}.
 
+{erl_opts, [nowarn_deprecated_catch]}.
+
 %% Duplicated from apps/rebar3:
 %% - we want people who rely on rebar3 as a dependency to still be able
 %%   to fetch it with git_subdir and have it work
@@ -18,7 +20,8 @@
 {escript_incl_priv, [{relx, "templates/*"},
                      {rebar, "templates/*"}]}.
 
-{overrides, [{add, relx, [{erl_opts, [{d, 'RLX_LOG', rebar_log}]}]}]}.
+{overrides, [{override, erlware_commons, [{erl_opts, [nowarn_deprecated_catch]}]},
+             {add, relx, [{erl_opts, [{d, 'RLX_LOG', rebar_log}]}]}]}.
 
 {profiles, [
     %% Only works at the top-level
