fix: OTP29 compilation

--- a/rebar.config
+++ b/rebar.config
@@ -46,8 +46,7 @@
         {erl_opts, [no_debug_info]},
         {overrides, [
             {override, erlware_commons, [
-                {erl_opts, [no_debug_info,
-                            warnings_as_errors]},
+                {erl_opts, [no_debug_info]},
                 {deps, []}, {plugins, []}]},
             {add, ssl_verify_hostname, [{erl_opts, [no_debug_info]}]},
             {add, certifi, [{erl_opts, [no_debug_info]}]},
