rebar.config: meck needs nowarn_deprecated_catch for OTP-29

--- a/rebar.config
+++ b/rebar.config
@@ -21,6 +21,7 @@
                      {rebar, "templates/*"}]}.
 
 {overrides, [{override, erlware_commons, [{erl_opts, [nowarn_deprecated_catch]}]},
+             {add, meck, [{erl_opts, [nowarn_deprecated_catch]}]},
              {add, relx, [{erl_opts, [{d, 'RLX_LOG', rebar_log}]}]}]}.
 
 {profiles, [
